welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: Missing closing brace `}' assumed here
var nbpas = 0;
^